<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PotRadActivity">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:height="48dp"
            android:background="#00BCD4"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/potenciacion_y_radicacion"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:typeface="sans"
            tools:ignore="TextViewEdits" />

        <EditText
            android:id="@+id/numero1OpEs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="number"
            android:ems="10"
            android:hint="@string/ingresa_la_base_o_el_radicando"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/numero2Flotante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="number"
            android:ems="10"
            android:hint="@string/ingresa_el_exponente_o_el_indice"
            android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sumatoria"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/potenciacion"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/factorial"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/radicaciacion"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/respuestaOpEs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/respuesta"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="17.5sp"
        android:textStyle="italic"
        android:typeface="sans" />

    </LinearLayout>

    <Button
    android:id="@+id/principalOpEs"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="bottom|end"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_weight="5"
    android:gravity="center"
    android:minHeight="48dp"
    android:text="@string/menu_principal"
    app:iconGravity="end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>